--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -7,7 +7,6 @@
 }
 
 #kitchen {
-  min-height: 700px;
   background: rgb(227, 119, 94);
   background: linear-gradient(
     90deg,
